kubernates/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: reactjs-client
          image: shanwij.azurecr.io/client:v1
          ports:
            - containerPort: 3000
        
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
