kubernates/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mongo-db
        image: shanwij.azurecr.io/mongo:v1
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: mongo-db-volume-claim

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
